fix layout spacing

--- a/source/sass/blocks/_lyrics.scss
+++ b/source/sass/blocks/_lyrics.scss
@@ -281,7 +281,7 @@
     padding-top: 0;
 
     & > * {
-      width: 430px;
+      width: 434px;
       margin-bottom: 40px;
     }
   }
